# experiment-player

./: .gitignore  AUTHORS  INSTALL  Makefile.am  README  build_mingw_binaries.sh  configure.ac  makemake_mingw_dev.sh
doc/: Doxyfile.in  Makefile.am  experiment-player.xml  html_custom.xsl  html_titlepage.spec.xml
doc/images/: data-window-new.xcf  player-window-new.xcf
lib/: Makefile.am
lib/experiment-reader/: Makefile.am  cclosure-marshallers.list  experiment-reader.c  experiment-reader.h  session.dtd
lib/experiment-reader/tests/: Makefile.am  test-experiment-valid.xml  unit-tests.c
lib/gtk-experiment-widgets/: Makefile.am  cclosure-marshallers.list  gtk-experiment-navigator.c  gtk-experiment-navigator.h  gtk-experiment-transcript-formats.c  gtk-experiment-transcript-private.h  gtk-experiment-transcript.c  gtk-experiment-transcript.h  gtk-experiment-widgets-catalog.xml
lib/gtk-vlc-player/: Makefile.am  cclosure-marshallers.list  gtk-vlc-player-catalog.xml  gtk-vlc-player.c  gtk-vlc-player.h
src/: Makefile.am  config.c  default.ui  experiment-player.h  format-selection.c  icon.rc  main.c  quick-open.c  quickopen.c
